<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
            <com.example.testwelcome.TitleBar
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <ScrollView android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_below="@+id/title_bar">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >


                    <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:weightSum="2">

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="147dp"
                    android:layout_height="193dp"
                    android:layout_marginTop="16dp"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardElevation="1.5dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/my_card_background"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/math"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/math_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />
                        <Button
                            android:id="@+id/btnMath"
                            android:layout_marginTop="90dp"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="24dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:background="@drawable/raised_selector"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:text="@string/press_to_getin"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="150dp"
                        android:layout_height="193dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardElevation="1.5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@color/my_card_background"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp">
                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/geography"
                            android:layout_marginTop="30dp"
                            android:layout_marginLeft="5dp"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/geography_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />
                        <Button android:layout_marginTop="90dp"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@drawable/raised_selector"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/press_to_getin"/>
                    </android.support.v7.widget.CardView>
                    </LinearLayout>
                    <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:weightSum="2">

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="147dp"
                        android:layout_height="193dp"
                        android:layout_marginTop="16dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardElevation="1.5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@color/my_card_background"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1">
                        <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/physics"
                        android:layout_marginTop="30dp"
                        android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/physics_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            /><Button android:layout_marginTop="90dp"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@drawable/raised_selector"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/press_to_getin"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="150dp"
                        android:layout_height="193dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardElevation="1.5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@color/my_card_background"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/chemistry"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chemistry_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />


                            <Button android:layout_marginTop="90dp"
                                android:layout_width="match_parent"
                                android:layout_height="28dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="24dp"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:gravity="center"
                                android:textColor="@android:color/white"
                                android:background="@drawable/raised_selector"
                                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                                android:text="@string/press_to_getin"/>

                    </android.support.v7.widget.CardView>

                    </LinearLayout>
                    <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="147dp"
                        android:layout_height="193dp"
                        android:layout_marginTop="16dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardElevation="1.5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@color/my_card_background"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="16dp">
                        <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/chinese"
                        android:layout_marginTop="30dp"
                            android:layout_marginLeft="3dp"

                        android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chinese_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            /><Button android:layout_marginTop="90dp"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@drawable/raised_selector"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/press_to_getin"/>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="150dp"
                        android:layout_height="193dp"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        app:cardElevation="1.5dp"
                        app:cardCornerRadius="5dp"
                        app:cardBackgroundColor="@color/my_card_background"
                        android:layout_weight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/math"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chinese_title"
                            android:layout_gravity="center"
                            android:layout_marginTop="34dp"
                            />
                        <Button android:layout_marginTop="90dp"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="24dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:background="@drawable/raised_selector"
                            android:textAppearance="@style/TextAppearance.AppCompat.Button"
                            android:text="@string/press_to_getin"/>
                    </android.support.v7.widget.CardView>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</RelativeLayout>